style: 변수명, 메서드명, 클래스 명 가독성 향상 위해서 변경